--- a/app/Resources/views/front-layout.html.twig
+++ b/app/Resources/views/front-layout.html.twig
@@ -15,158 +15,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <body>
 <!---start-wrap---->
 <div class="wrap">
-<!---start-sidebar---->
-<div class="left-sidebar">
-    <div class="logo">
-        <a href="index.html"><img src="{{ asset('front/images/logo.png') }}" title="logo" /></a>
-        <h1>Feedlive Blogger site</h1>
-    </div>
-    <div class="top-nav">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Support</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </div>
+
+{% include 'BlogAppBundle::nav.html.twig' %}
+
+
+{% block body %}{% endblock %}
+
+
+{% include 'BlogAppBundle::sidebar.html.twig' %}
+
 </div>
-<!-- start-content -->
-<div class="content">
-    <div class="grids">
-        <div class="grid box">
-            <div class="grid-header">
-                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod . </h3>
-                <ul>
-                <li><span>Post By Admin on sunday,March 05,2013 width</span></li>
-                <li><a href="#">5 comments</a></li>
-                </ul>
-            </div>
-            <div class="grid-img-content">
-                <a href="singlepage.html"><img src="{{ asset('front/images/1.jpg') }}" /></a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium perspiciatis unde omnis iste natus error sit voluptatem accusantiumdoloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum<a href="#">...</a></p>
-                <div class="clear"> </div>
-            </div>
-            <div class="comments">
-            <ul>
-                <li><a href="#"><img src="{{ asset('front/images/views.png') }}" title="view" /></a></li>
-                <li><a href="#"><img src="{{ asset('front/images/likes.png') }}" title="likes" /></a></li>
-                <li><a href="#"><img src="{{ asset('front/images/link.png') }}" title="link" /></a></li>
-                <li><a class="readmore" href="singlepage.html">ReadMore</a></li>
-            </ul>
-            </div>
-        </div>
-        <div class="grid box">
-            <div class="grid-header">
-                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod . </h3>
-                <ul>
-                    <li><span>Post By Admin on sunday,March 05,2013 width</span></li>
-                    <li><a href="#">5 comments</a></li>
-                </ul>
-            </div>
-            <div class="grid-img-content">
-                <a href="singlepage.html"><img src="{{ asset('front/images/2.jpg') }}" /></a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium perspiciatis unde omnis iste natus error sit voluptatem accusantiumdoloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum<a href="#">...</a></p>
-                <div class="clear"> </div>
-            </div>
-            <div class="comments">
-                <ul>
-                    <li><a href="#"><img src="{{ asset('front/images/views.png') }}" title="view" /></a></li>
-                    <li><a href="#"><img src="{{ asset('front/images/likes.png') }}" title="likes" /></a></li>
-                    <li><a href="#"><img src="{{ asset('front/images/link.png') }}" title="link" /></a></li>
-                    <li><a class="readmore" href="singlepage.html">ReadMore</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="grid box">
-            <div class="grid-header">
-                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod . </h3>
-                <ul>
-                    <li><span>Post By Admin on sunday,March 05,2013 width</span></li>
-                    <li><a href="#">5 comments</a></li>
-                </ul>
-            </div>
-            <div class="grid-img-content">
-                <a href="singlepage.html"><img src="{{ asset('front/images/3.jpg') }}" /></a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium perspiciatis unde omnis iste natus error sit voluptatem accusantiumdoloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum<a href="#">...</a></p>
-                <div class="clear"> </div>
-            </div>
-            <div class="comments">
-                <ul>
-                    <li><a href="#"><img src="{{ asset('front/images/views.png') }}" title="view" /></a></li>
-                    <li><a href="#"><img src="{{ asset('front/images/likes.png') }}" title="likes" /></a></li>
-                    <li><a href="#"><img src="{{ asset('front/images/link.png') }}" title="link" /></a></li>
-                    <li><a class="readmore" href="singlepage.html">ReadMore</a></li>
-                </ul>
-            </div>
-            <div class="clear"> </div>
-        </div>
-            <div class="clear"> </div>
-    </div>
-            <div class="clear"> </div>
-        <div class="content-pagenation">
-                        <li><a href="#">Frist</a></li>
-                        <li><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><span>....</span></a></li>
-                        <li><a href="#">Last</a></li>
-                        <div class="clear"> </div>
-                    </div>
-                    <div class="clear"> </div>
-                    <div class="footer">
-                        <p>Feedlive &#169    All Rights Reserved | Designed By <a href="http://w3layouts.com/">W3Layouts</a></p>
-                    </div>
-                    <div class="clear"> </div>
-                    
-            </div>
-            <div class="right-sidebar">
-                <div class="search-bar">
-                    <form>
-                        <input type="text" value="Search" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search';}" />
-                        <input type="submit" value="" />
-                    </form>
-                </div>
-                <div class="clear"> </div>
-                <div class="featured-Videos">
-                    <h3>Featured Videos</h3>
-                    <a href="#"><img src="{{ asset('front/images/videos.jpg') }}" title="videos" /></a>
-                </div>
-                <div class="popular-post">
-                    <h3>popular-posts</h3>
-                    <div class="post-grid">
-                        <img src="{{ asset('front/images/videos.jpg') }}" title="post1">
-                        <p>Lorem ipsum dolor sit ametconsectetur dolor,<a href="#">...</p>
-                        <div class="clear"> </div>
-                    </div>
-                    <div class="post-grid">
-                        <img src="{{ asset('front/images/videos.jpg') }}" title="post1">
-                        <p>Lorem ipsum dolor sit ametconsectetur dolor,<a href="#">...</p>
-                        <div class="clear"> </div>
-                    </div>
-                    <div class="view-all">
-                        <a href="#">ViewAll</a>
-                    </div>
-                </div>
-                <div class="clear"> </div>
-                <div class="featured-Videos">
-                    <h3>Recent Videos</h3>
-                    <a href="#"><img src="{{ asset('front/images/videos.jpg') }}" title="videos" /></a>
-                </div>
-                <div class="fallowers">
-                    <h3>Followers</h3>
-                    <ul>
-                        <li><a href="#"><img src="{{ asset('front/images/videos.jpg') }}" title="name"></a></li>
-                        <li><a href="#"><img src="{{ asset('front/images/videos.jpg') }}" title="name"></a></li>
-                        <li><a href="#"><img src="{{ asset('front/images/videos.jpg') }}" title="name"></a></li>
-                        <li><a href="#"><img src="{{ asset('front/images/videos.jpg') }}" title="name"></a></li>
-                        <li><a href="#"><img src="{{ asset('front/images/videos.jpg') }}" title="name"></a></li>
-                        <li><a href="#"><img src="{{ asset('front/images/videos.jpg') }}" title="name"></a></li>
-                    </ul>
-                </div>
-            </div>
-            <!-- end-sidebar -->
-        </div>
         <!---end-wrap -->
     </body>
 </html>
