--- a/src/Blog/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/Blog/AppBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,5 @@
-Hello {{ name }}!
+{% extends 'front-layout.html.twig' %}
+
+{% block body %}
+    {{ render(controller('BlogPostBundle:Post:index')) }}
+{% endblock %}
